--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,13 @@
         android:allowBackup="true"
         android:icon="@drawable/hanger_back"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/hanger_back"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyWardrobe"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.MyWardrobe">
+        <activity
+            android:name=".Closet_items"
+            android:exported="true" />
         <activity
             android:name=".Profile"
             android:exported="true" />
@@ -54,25 +57,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.bilki.mywardrobe.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-
         </provider>
 
         <meta-data
