Look v1.2 (look view, look edit, delete) (look items OnClick info, delete) (minor fixes in generally)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWardrobe">
         <activity
+            android:name=".SelectedLooks"
+            android:exported="true" />
+        <activity
             android:name=".AddLookItems"
             android:exported="true" />
         <activity
