--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ android {
 }
 
 dependencies {
-    
 
 
 
@@ -44,6 +43,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828' //image loading
     implementation 'com.android.volley:volley:1.1.1' //JSON parsing
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
